# HowFarAmI

./: .gitignore  README.md  game_api.py  howFarAmI.html  index.html  prueba.html  pyproject.toml  reach_service.py  reach_to_fastapi.js  reacher_api.py
.github/workflows/: azure-functions-app-python.yml  container-app-mffdlfbzf4mic-AutoDeployTrigger-bd32f398-5342-470e-a0fc-902eb128619d.yml
front-files/: howFarAmI.html  reach_to_fastapi.js  styles.css
reacher_api/: app.py  links_path.py  models.py  reach_service.py  reacher_api.py  scrape_utils.py  search.py  url_utils.py
